@@ -699,17 +699,17 @@ const html = {
     shelter_view_options: function() {
         return [
             '<option value="altered">' + _("Altered") + '</option>',
-            '<option value="coordinator">' + _("Adoption Coordinator") + '</option>',
-            '<option value="coordinatorfosterer">' + _("Adoption Coordinator and Fosterer") + '</option>',
+            common.has_permission("vo") ? '<option value="coordinator">' + _("Adoption Coordinator") + '</option>' : "",
+            common.has_permission("vo") ? '<option value="coordinatorfosterer">' + _("Adoption Coordinator and Fosterer") + '</option>' : "",
             '<option value="agegroup">' + _("Age Group") + '</option>',
             '<option value="agegrouplitter">' + _("Age Group and Litter") + '</option>',
             '<option value="color">' + _("Color") + '</option>',
             '<option value="entrycategory">' + _("Entry Category") + '</option>',
             '<option value="entrytype">' + _("Entry Type") + '</option>',
             '<option value="flags">' + _("Flags") + '</option>',
-            '<option value="fosterer">' + _("Fosterer") + '</option>',
-            '<option value="fostereractive">' + _("Fosterer (Active Only)") + '</option>',
-            '<option value="fostererspace">' + _("Fosterer (Space Available)") + '</option>',
+            common.has_permission("vo") ? '<option data-permission="vo" value="fosterer">' + _("Fosterer") + '</option>' : "",
+            common.has_permission("vo") ? '<option data-permission="vo" value="fostereractive">' + _("Fosterer (Active Only)") + '</option>' : "",
+            common.has_permission("vo") ? '<option data-permission="vo" value="fostererspace">' + _("Fosterer (Space Available)") + '</option>' : "",
             '<option value="goodwith">' + _("Good with") + '</option>',
             '<option value="litter">' + _("Litter") + '</option>',
             '<option value="location">' + _("Location") + '</option>',
@@ -727,7 +727,7 @@ const html = {
             '<option value="sex">' + _("Sex") + '</option>',
             '<option value="sexspecies">' + _("Sex and Species") + '</option>',
             '<option value="site">' + _("Site") + '</option>',
-            '<option value="sitefoster">' + _("Site (fosters separate)") + '</option>',
+            common.has_permission("vo") ? '<option value="sitefoster">' + _("Site (fosters separate)") + '</option>' : "",
             '<option value="species">' + _("Species") + '</option>',
             '<option value="speciesbreed">' + _("Species and Breed") + '</option>',
             '<option value="speciescode">' + _("Species and Code") + '</option>',
